# asyncio

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  package-lock.json  vcpkg.json
benchmark/: BENCHMARK_RESULTS.md  CMakeLists.txt  README.md  cache_bench_main.cpp  common.h  memcached_bench.cpp  redis_bench.cpp  tcp_echo_asio.cpp  tcp_echo_asio_async.cpp  tcp_echo_asyncio.cpp  tcp_echo_trantor.cpp  ws_asyncio.cpp  ws_asyncio_optimized.cpp  ws_drogon.cpp  ws_server_asyncio.cpp  ws_server_drogon.cpp
doc/: lowlatency.md  new_features.md
doc/api/: mqtt.md
include/asyncio/candle/: candle.h  candle_builder.h  candle_manager.h
include/asyncio/memcached/: client.h  protocol.h
include/asyncio/mqtt/: client.h  protocol.h
include/asyncio/net/lowlatency/: kcp.h  shm.h  udp.h
include/asyncio/redis/: client.h
review/: review-asyncio-hft.md  review-r1.md
sample/: CMakeLists.txt
sample/candle/: main.cpp
sample/candle/config/: candle_worker.json
sample/kcp/: echo.cpp
sample/memcached/: main.cpp
sample/mqtt/: main.cpp
sample/perf_test/: main.cpp  memory_test.cpp
sample/python/: binary_candle_client.py
sample/redis/: main.cpp
sample/shm/: spsc.cpp
sample/udp/: echo.cpp
skills/asyncio/: HFT.md  SKILL.md
src/http/: websocket.cpp
src/memcached/: client.cpp  protocol.cpp
src/mqtt/: client.cpp  protocol.cpp
src/redis/: client.cpp
test/: CMakeLists.txt  binary.cpp  buffer.cpp  catch_extensions.h  channel.cpp  event_loop.cpp  fs.cpp  io.cpp  thread.cpp
test/http/: request.cpp  websocket.cpp
test/memcached/: integration.cpp  protocol.cpp
test/mqtt/: client.cpp  integration.cpp  protocol.cpp
test/net/: dgram.cpp  net.cpp  stream.cpp  tls.cpp
test/net/lowlatency/: kcp.cpp  shm.cpp  udp.cpp
test/redis/: integration.cpp
test/task/: error.cpp
